<resources>
    <string name="app_name">Parentshour</string>
    <string-array name="navdraweritemsafterlogin">
        <!--<item>Playdate Search</item>
        <item>Search Assistant</item>-->
        <item>Home</item>
        <item>Assistant Requests</item>
        <item>Friends</item>
        <item>Notifications</item>
        <item>Playdate Events</item>
        <item>Settings</item>
        <item>Chats</item>
    </string-array>

    <string-array name="enthincityArray">
        <item>Select ethnicity</item>
        <item>Hispanic or Latino</item>
        <item>Asian</item>
        <item>White</item>
        <item>African American</item>
        <item>Other</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_assistantrequests</item>
        <item>@drawable/ic_friend</item>
        <item>@drawable/ic_notifications</item>
        <item>@drawable/ic_setting</item>
        <item>@drawable/ic_chats</item>
    </array>


    <array name="nav_drawer_assistant_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_notifications</item>
        <item>@drawable/ic_setting</item>
        <item>@drawable/ic_chats</item>
    </array>

    <!--Side panel item ic_name string array after login-->
    <string-array name="navdraweritemsbeforelogin">
        <item>Home</item>
        <item>Assistant Requests</item>
        <item>Friends</item>
        <item>Notifications</item>
        <item>Settings</item>
        <item>Chats</item>
    </string-array>

    <string-array name="navDraweritemsAssistant">
        <item>Home</item>
        <item>Notifications</item>
        <item>Settings</item>
        <item>Chats</item>
    </string-array>

    <string name="Lato_Regular">Lato_Regular.ttf</string>
    <string name="Lato_Bold">Lato_Bold.ttf</string>
    <string name="Lato_Medium">Lato_Medium.ttf</string>

    <string name="years">  Years</string>
    <string name="facebook">FACEBOOK</string>
    <string name="name">Name</string>
    <string name="phone">Phone no</string>
    <string name="email">E-mail</string>
    <string name="citytext">City</string>
    <string name="statetext">State</string>
    <string name="zipcodetext">Zipcode</string>
    <string name="experiencetext">Experience</string>
    <string name="billingtext">Billing /\ Hour</string>
    <string name="abouttext">About :</string>
    <string name="about">About </string>
    <string name="gigstext">Types of Gigs :  </string>
    <string name="gigs">Types of Gigs   </string>
    <string name="search">Search</string>
    <string name="parent"> Parent </string>
    <string name="assistant"> Assistant </string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="username">USER NAME</string>
    <string name="edit">EDIT</string>

    <string name="imagedescription">Profile image</string>
    <string name="imagePersondescription">Person Image</string>
    <string name="imagePhonedescription">Phone Image</string>
    <string name="imageemaildescription">Email Image</string>
    <string name="imageExperiencedescription">Experience Image</string>
    <string name="imagecitydescription">City Image</string>
    <string name="imagestatedescription">State Image</string>
    <string name="imagezipcodedescription">Zipcode Image</string>
    <string name="imagebillingdescription">Billing Image</string>
    <string name="imageaboutdescription">About Image</string>
    <string name="imagegigsdescription">Gigs Image</string>
    <string name="imagehourlydescription">Hourly description Image</string>
    <string name="imageeducationdescription">Education description Image</string>


    <string name="loading">Please wait &#8230;</string>
    <string name="fbid">1524942947519089</string>
    <string name="title_activity_login">Sign in</string>
    <string name="opendrawer">Open</string>
    <string name="closedrawer">close</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="billing">Billing</string>
    <string name="playdate_events">Playdate Events</string>
    <string name="search_for_assistant">Search for Assistant</string>
    <string name="search_for_playdate">Search for Playdate</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="skill">Skill: </string>
    <string name="assisting_with_child_care">Assisting with child care</string>
    <string name="cooking">Cooking</string>
    <string name="house_errands">House Errands</string>
    <string name="bet_friendly">Bet Friendly</string>
    <string name="other">Other: </string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="forgot_passsword">Forgot Passsword?</string>
    <string name="login">Login</string>
    <string name="or_connect_with">Or Connect With :</string>
    <string name="google">GOOGLE</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="zipcode">Zipcode</string>
    <string name="age">Age</string>
    <string name="occupation">Occupation</string>
    <string name="education">Education</string>
    <string name="gender">Gender :</string>
    <string name="genders">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="origin">Origin</string>
    <string name="available_day">Available Day :</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>
    <string name="available_time">Available Time :</string>
    <string name="available_times">Available Time </string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="mobile_no">Mobile No</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="available_days">Available Days</string>
    <string name="next">Next</string>
    <string name="verify">Verify</string>
    <string name="done">Done</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="didn_t_receive_otp_send_again">Didn\'t Receive OTP, Send again.</string>
    <string name="logout">Logout</string>
    <string name="enter_register_e_mail">Enter Register E-mail</string>
    <string name="get_new_password">Get new password</string>
    <string name="ok">OK</string>
    <string name="addUsers">Add Users</string>
    <string name="groupname">Group Name</string>
    <string name="plus">+</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="nextscreen"><![CDATA[>]]></string>
    <string name="play_date_events">Play Date Events</string>
    <string name="accept">Accept</string>
    <string name="igonre">Igonre</string>
    <string name="block">Block</string>
    <string name="do_you_want_to_attend">Do you want to attend ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date">Date:</string>
    <string name="time">Time</string>
    <string name="address">Address</string>
    <string name="addfriends">Add Friends</string>
    <string name="create">Create</string>
    <string name="request">Request</string>
    <string name="task_name">Task Name</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="Request">Request</string>
    <string name="reject">Reject</string>
    <string name="rate_me">Rate me</string>
    <string name="_0">0</string>

</resources>
