<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textColor="@color/gray_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_date_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/edittext_white_background"
            android:drawableEnd="@drawable/ic_date_button"
            android:drawableRight="@drawable/ic_date_button"
            android:gravity="center_vertical"
            android:padding="1dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/gray_color" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/time"
            android:textColor="@color/gray_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_time_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/edittext_white_background"
            android:drawableEnd="@drawable/ic_time_button"
            android:drawableRight="@drawable/ic_time_button"
            android:gravity="center_vertical"
            android:padding="1dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/gray_color" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/address"
            android:textColor="@color/gray_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_address_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/edittext_white_background"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="5"
            android:minLines="5"
            android:padding="5dp"
            android:textColor="@color/gray_color" />

        <TextView
            android:id="@+id/tv_addFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_plus_add"
            android:drawableRight="@drawable/ic_plus_add"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/addfriends"
            android:textColor="@color/gray_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Orange" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerAddedGroupMembers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_create"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"

                android:background="@color/Orange"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/create"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/Orange"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

