<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/uploadImageLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_upload_profile_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_profilelogo" />

            <ImageView
                android:id="@+id/iv_add_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/iv_upload_profile_photo"
                android:layout_alignEnd="@+id/iv_upload_profile_photo"
                android:layout_alignRight="@+id/iv_upload_profile_photo"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/imagedescription"
                android:src="@drawable/ic_add_pro" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_round_address_popup"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagePersondescription"
                android:padding="5dp"
                android:src="@drawable/ic_group" />

            <View
                android:id="@+id/view_person"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/gray_color" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/transparent"
                android:gravity="start|center"
                android:hint="@string/groupname"
                android:inputType="textCapWords"
                android:textColor="@color/gray_color"
                android:textColorHint="@color/gray_color"
                android:textSize="@dimen/activity_fifteen_textSize" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_addUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/tv_addMemberToGroup"
            android:layout_toStartOf="@+id/tv_addMemberToGroup"
            android:padding="10dp"
            android:text="@string/addUsers"
            android:textColor="@color/gray_color"
            android:textSize="@dimen/activity_medium_textSize" />

        <TextView
            android:id="@+id/tv_addMemberToGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_plus_add"
            android:drawableRight="@drawable/ic_plus_add"
            android:padding="5dp"
            android:textColor="@color/App_Orange" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/tv_addMemberToGroup"
            android:background="@color/App_btn_Orange" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerAddedGroupMembers"
             android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_below="@+id/view"
            android:layout_margin="5dp">
         </android.support.v7.widget.RecyclerView>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Orange"
            android:padding="5dp"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_fifteen_textSize" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/Orange"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_fifteen_textSize" />

    </LinearLayout>
</LinearLayout>