<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.3"
            android:text="@string/date"
            android:textColor="@color/gray_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_date_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="0.7"
            android:background="@drawable/edittext_white_background"
            android:drawableEnd="@drawable/ic_date_button"
            android:drawableRight="@drawable/ic_date_button"
            android:gravity="center_vertical"
            android:padding="1dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/gray_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.3"
            android:text="@string/start_time"
            android:textColor="@color/gray_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_start_time_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="0.7"
            android:background="@drawable/edittext_white_background"
            android:drawableEnd="@drawable/ic_time_button"
            android:drawableRight="@drawable/ic_time_button"
            android:gravity="center_vertical"
            android:padding="1dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/gray_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.3"
            android:text="@string/end_time"
            android:textColor="@color/gray_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_end_time_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="0.7"
            android:background="@drawable/edittext_white_background"
            android:drawableEnd="@drawable/ic_time_button"
            android:drawableRight="@drawable/ic_time_button"
            android:gravity="center_vertical"
            android:padding="1dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/gray_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_task_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:text="@string/task_name"
            android:textColor="@color/gray_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_task_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="0.7"
            android:background="@drawable/edittext_white_background"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="5dp"
            android:textColor="@color/gray_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_set_request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/Orange"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Request"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Orange"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>