<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp"
            android:textColor="@color/gray_color" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp"
            android:textColor="@color/gray_color" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:padding="2dp"
            android:src="@drawable/ic_location"
            android:textColor="@color/gray_color" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewHorizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_attend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/do_you_want_to_attend"
            android:textColor="@color/gray_color"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_search_background"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/yes"
            android:textColor="@color/Orange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/edittext_search_background"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/no"
            android:textColor="@color/Orange" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Orange" />
</LinearLayout>